css/team.css
.reel-content {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    height: auto;
    overflow-x: auto;
    position: absolute;
    width: 100%
}

@supports (-webkit-overflow-scrolling: touch) {
    .reel-content {
        overflow-x: scroll
    }
}

@media (max-width: 992px) {
    .reel-content {
        left: 0;
        position: absolute;
        width: 100%
    }
}

.reel-container {
    position: relative
}

.team-reel {
    height: 350px !important
}

.team-link {
    font-size: smaller;
    padding: 0;
}

.team-member {
    height: auto;
    margin-right: 60px;
    min-width: 130px;
    padding-bottom: 30px;
    text-align: center
}

.team-member img {
    border-radius: 100%;
    margin-bottom: 20px;
    max-width: 128px
}

.team-member p {
    margin: 0;
    font-size: 14px;
}

.team-member ul {
    border-top: 1px solid #e5e5e5;
    display: inline-block;
    float: left;
    -ms-grid-columns: auto auto auto auto;
    grid-template-columns: auto auto auto auto;
    list-style-type: disc;
    margin-bottom: 0;
    padding: 15px 10px 0 10px;
    width: 100%
}

.team-member ul li {
    display: inline-block;
    margin-right: 10px
}

.team-member ul i {
    color: #243d42;
    font-size: 15px
}

@media (max-width: 992px) {
    .team-member ul {
        margin-right: 40px
    }
}

.team-member .member-info {
    height: 50px;
    max-height: 50px;
    overflow: hidden;
}

.team-member .member-info p {
    overflow: hidden;
    text-overflow: ellipsis;
    max-height: 44px;
}

.scrollbar
{
    overflow-x: scroll;
}

#style-7::-webkit-scrollbar-track
{
	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
	background-color: #F5F5F5;
	border-radius: 10px;
}

#style-7::-webkit-scrollbar
{
	width: 10px;
	background-color: #678dd7;
}

#style-7::-webkit-scrollbar-thumb
{
    border-radius: 10px;
    background-color: #4670B5;
}

